@@ -1,3 +1,3 @@
 - cpanfile
-- reqs Config::General, lwp::protocol::https, URL::Encode
+- reqs Config::General, lwp::protocol::https, URL::Encode, DateTime
 - custom fields hardcoded
