@@ -6,6 +6,8 @@ use v5.10;
 use namespace::autoclean;
 
 use WebService::FogBugz::XML::Event;
+use DateTime;
+use DateTime::Format::Strptime;
 use Data::Dumper;
 use DDP;
 
@@ -70,6 +72,10 @@ has trello_order => (
     is        => 'rw',
     isa       => 'Str',
     );
+has last_scout_occurrence => (
+    is        => 'rw',
+    isa       => 'Maybe[DateTime]',
+    );
 has events => (
     isa       => 'ArrayRef[WebService::FogBugz::XML::Event]',
     traits    => ['Array'],
@@ -93,7 +99,7 @@ sub get {
         $self = $self->new(number => $number);
         }
 
-    my $case_cols = 'tags,sTitle,sStatus,sCategory,hrsOrigEst,hrsCurrEst,hrsElapsed,plugin_customfields_at_fogcreek_com_rto32,ixBugParent,events,plugin_customfields';
+    my $case_cols = 'tags,sTitle,sStatus,sCategory,hrsOrigEst,hrsCurrEst,hrsElapsed,plugin_customfields_at_fogcreek_com_rto32,ixBugParent,events,plugin_customfields,dtLastOccurrence';
 
     my $dom = $self->get_url(search => {
         q       => $self->number,
@@ -128,6 +134,15 @@ sub populate_fields {
     $self->bz($dom->findvalue('//plugin_customfields_at_fogcreek_com_bugzillaa62'));
     $self->trello_id($dom->findvalue('//plugin_customfields_at_fogcreek_com_trelloxidp8d'));
     $self->trello_order($dom->findvalue('//plugin_customfields_at_fogcreek_com_trelloxorderb8e'));
+    if (my $last_occurrence = $dom->findvalue('//dtLastOccurrence')){
+        state $date_parser = DateTime::Format::Strptime->new(pattern => "%FT%H:%M:%SZ");
+        if (my $date = $date_parser->parse_datetime( $last_occurrence )){
+            $self->last_scout_occurrence( $date );
+            }
+        else {
+            warn "Couldn't parse date time $last_occurrence";
+            }
+        }
 
     foreach my $event_dom ($dom->findnodes('//events/event')){
         my $event = WebService::FogBugz::XML::Event->from_xml($event_dom);
