@@ -3,6 +3,7 @@ NEXT
  - Added trello fields to custom fields
  - Added search facility
  - Added case update
+ - Added scout last Occcurence field
 
 1.0002 - 2013-09-12
  - Prevent tests running under smoke test from prompting.
